# xast

./: .gitignore  README.md
formal/: .gitignore  xast_ecs_proof.tex
xast-server/: xast-server.cabal
xastc/: cabal.project  test.xst  xastc.cabal
xastc/XastTest/src/: Main.xst
xastc/XastTest/src/Utils/: Components.xst  Garbage.xst
xastc/XastTestProject/: Components.xst  Main.xst  Renderer.xst
xastc/XastTestProject/Utils/: Garbage.xst
xastc/app/: Main.hs
xastc/src/: Xast.hs
xastc/src/Xast/: AST.hs  Config.hs  Error.hs  Parser.hs  Pipeline.hs  SemAnalyzer.hs  Utils.hs
xastc/src/Xast/Error/: Pretty.hs  Types.hs
xastc/src/Xast/Parser/: Common.hs  Config.hs  Expr.hs  Extern.hs  Function.hs  Headers.hs  Ident.hs  Program.hs  System.hs  Type.hs
xastc/src/Xast/SemAnalyzer/: Analysis.hs  Env.hs  Monad.hs  SymTable.hs  Types.hs
xastc/test/: Main.hs
xastvm/: Cargo.toml
xastvm/src/: lib.rs  main.rs
