cabal-version:      3.0
name:               xastc
version:            0.1.0.0
-- synopsis:
description:        Xast language compiler
license:            Unlicense
license-file:       LICENSE
author:             Oleksandr Hnutov
maintainer:         sanerhp.mail@gmail.com
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        Xast,
        Xast.Parser,
        Xast.Parser.Ident,
        Xast.Parser.Type,
        Xast.Parser.Function
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.18.3.0,
        megaparsec ==9.7.0,
        text ==2.0.2
    hs-source-dirs:   src
    default-language: GHC2021

executable xastc
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.3.0,
        xastc

    hs-source-dirs:   app
    default-language: GHC2021

test-suite xastc-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        megaparsec ==9.7.0,
        text ==2.0.2,
        HUnit ==1.6.2.0,
        xastc
