cabal-version:      3.0
name:               xastc
version:            0.1.0.0
description:        Xast language compiler
license:            Unlicense
license-file:       LICENSE
author:             Oleksandr Hnutov
maintainer:         sanerhp.mail@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        Xast,
        Xast.Error,
        Xast.Utils,

        Xast.Parser,
        Xast.Parser.Ident,
        Xast.Parser.Type,
        Xast.Parser.Function,
        Xast.Parser.Expr,
        Xast.Parser.System,
        Xast.Parser.Headers,
        Xast.Parser.Extern,
        Xast.Parser.Program,
        Xast.Parser.Config,

        Xast.SemAnalyzer,
        Xast.SemAnalyzer.Env,
        Xast.SemAnalyzer.SymTable,
        Xast.SemAnalyzer.Analysis

    build-depends:    
        mtl ^>=2.3.1,
        base ^>=4.18.3.0,
        megaparsec ==9.7.0,
        text ==2.0.2,
        containers ==0.6.7,
        vector ==0.13.2.0,
        directory ==1.3.9.0,
        parser-combinators ==1.3.0,
        diagnose
    hs-source-dirs:   src
    default-language: GHC2021

executable xastc
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        text ==2.0.2,
        xastc

    hs-source-dirs:   app
    default-language: GHC2021

test-suite xastc-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        megaparsec ==9.7.0,
        text ==2.0.2,
        HUnit ==1.6.2.0,
        xastc
